rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
  labels:
    app: rollouts-demo
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
        - name: rollouts-demo
          image: "prabhat823/springboot-helloworld:v1"
          command: ["/bin/sh"]
          args: ["-c", "while true; do echo hello; sleep 10;done"]
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: http
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: http
  strategy:
#        blueGreen:
#          activeService: rollouts-demo
#          previewService: rollouts-demo-preview
#          autoPromotionEnabled: false
     canary:
       stableService: service-stable
       canaryService: service-canary
       trafficRouting:
        nginx:
          stableIngress: ingress-stable
       steps:
       - setWeight: 20
       - pause: {}
       - setWeight: 40
       - pause: {}
       - setWeight: 70
       - pause: {}
