nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-np-service
spec:
  type: NodePort
  selector:
    app: rollouts-demo
  ports:
  - nodePort: 30008
    protocol: TCP
    port: 80
    targetPort: 80
