service-canary.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-canary
  labels:
    app: service-canary
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollouts-canary
