service-stable.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-stable
  labels:
    app: service-stable
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollouts-demo
